--- a/Moccie/Style/StyleSheet.css
+++ b/Moccie/Style/StyleSheet.css
@@ -13,7 +13,9 @@ header {
     height: 100%;
     background-color: White;
 }
-
+.HeadImg{
+	vertical-align: middle;
+}
 /* top nav start */
 ul.topnav {
     line-height: 0.5;
