--- a/Moccie/Style/Produkter.css
+++ b/Moccie/Style/Produkter.css
@@ -29,6 +29,7 @@
 #Grupper {
     margin: 0 20px 0 0;
     width: 310px;
+  	height: 160px;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 25px;
