--- a/Moccie/Style/SliderCss.css
+++ b/Moccie/Style/SliderCss.css
@@ -229,11 +229,11 @@ textarea {
     font: inherit
 }
 /* End extract */
-html, body {
+/*html, body {
     font-family: Verdana,sans-serif;
     font-size: 15px;
     line-height: 1.5
-}
+}*/
 
 .w3-serif {
     font-family: serif
