--- a/Moccie/Style/repeatable.css
+++ b/Moccie/Style/repeatable.css
@@ -87,6 +87,9 @@ input[type=submit]:hover {
 .Top60 {
     margin-top: 60px;
 }
+.right2{
+    margin-right:2px;
+}
 .bottom10{
     margin-bottom:10px;
 }
