--- a/Moccie/MasterPage.master
+++ b/Moccie/MasterPage.master
@@ -17,6 +17,7 @@
     <link href="Style/LightBox.css" rel="stylesheet" />
 
     <script src="Js/redirection-mobile.js"></script>
+    <script src="../Scripts/ckeditor/ckeditor.js"></script>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
