--- a/Moccie/MasterPage.master
+++ b/Moccie/MasterPage.master
@@ -17,7 +17,6 @@
     <link href="Style/LightBox.css" rel="stylesheet" />
 
     <script src="Js/redirection-mobile.js"></script>
-    <script src="../Scripts/ckeditor/ckeditor.js"></script>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,13 +68,16 @@
         <footer>
             <article>
                 <h3>
-                    <asp:HyperLink ID="HyperLinkFace" runat="server" NavigateUrl="http://www.Twitch.tv/Moccie" Style="color: #4999aa;">MoccieMoo</asp:HyperLink>
+                    <%--<a href="http://www.Twitch.tv/Moccie"></a>--%>
+                    <asp:HyperLink ID="HyperLinkFace" runat="server" NavigateUrl="http://www.Twitch.tv/Moccie" Style="color: #4999aa;">Moccie</asp:HyperLink>
                     |
-                <asp:HyperLink ID="HyperLinkTwit" runat="server" NavigateUrl="http://www.Twitter.com/M0ccie" Style="color: #4999aa;">M0ccie</asp:HyperLink>
+                    <%--<a href="http://www.Twitter.com/M0ccie"></a>--%>
+                    <asp:HyperLink ID="HyperLinkTwit" runat="server" NavigateUrl="http://www.Twitter.com/M0ccie" Style="color: #4999aa;">M0ccie</asp:HyperLink>
                     |
-                <asp:HyperLink ID="HyperLinkTwitch" runat="server" NavigateUrl="https://www.facebook.com/MoccieMoo/" Style="color: #4999aa;">Moccie</asp:HyperLink>
+                    <%--<a href="https://www.facebook.com/MoccieMoo/"></a>--%>
+                    <asp:HyperLink ID="HyperLinkTwitch" runat="server" NavigateUrl="https://www.facebook.com/MoccieMoo/" Style="color: #4999aa;">MoccieMoo</asp:HyperLink>
                     |
-                <a href="Kontakt.aspx" style="color: #4999aa;">Contakt</a></h3>
+                    <a href="Kontakt.aspx" style="color: #4999aa;">Contact</a></h3>
                 <%--<asp:Repeater ID="RepeaterFooter" runat="server" DataSourceID="SqlDataSourceFooter">
                     <ItemTemplate>
                         <h3><%#Eval("Text") %></h3>
