--- a/Moccie/Mobile/Style/Default.css
+++ b/Moccie/Mobile/Style/Default.css
@@ -10,7 +10,7 @@ section article.About p {
 section article.About {
     margin: 30px 0 0 100px;
     background-color: #FFF;
-    width: 345px;
+    width: 90%;
     height: 400px;
     float: left;
     border: 2px solid #FFF;
