--- a/Moccie/Mobile/Style/responsive.css
+++ b/Moccie/Mobile/Style/responsive.css
@@ -102,7 +102,7 @@
 
 @media screen and (max-width: 990px) {
     section article.About {
-        margin: 130px 0 30px 15px;
+        margin: 160px 20px 30px 20px;
         clear: left;
     }
 }
