--- a/Moccie/Mobile/Style/StyleSheet.css
+++ b/Moccie/Mobile/Style/StyleSheet.css
@@ -140,14 +140,14 @@ footer {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-    width: 500px;
-    float: right;
-    margin-right:50px;
+    width: 80%;
+    margin: 40px 0 40px 24px;
+    /*float: right;
+    margin-right:50px;*/
 }
 #TekstForm {
-    width: 500px;
-    float: left;
-    margin-left: 50px;
+    /*width: 500px;
+    float: left;*/
     text-align:center;
 }
 /*#TekstForm, h2 {
