--- a/Moccie/NewStyles/Masterpage_moccie.css
+++ b/Moccie/NewStyles/Masterpage_moccie.css
@@ -1,2 +1,113 @@
-﻿body {
+﻿header {
+    width: 100%;
+    height: 100%;
+    background-color: White;
 }
+
+/* top nav mini start */
+.imgbanner{
+   float:left;
+   margin:10px 0 0 230px;
+   padding:0 0 0 0;
+}
+
+ul.minitopnav {
+    height: 80px;
+    background-color: white;
+    line-height: 0.5;
+    list-style-type: none;
+    margin: 0;
+    padding: 30px 0 0 0;
+    overflow: hidden;
+    /*background-color: #101010;*/
+    /*-webkit-box-shadow: 0px 2px 5px 0px red;
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);*/
+}
+
+    ul.minitopnav li {
+        float: left;
+    }
+
+        ul.minitopnav li a {
+            display: block;
+            color: black;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+            ul.minitopnav li a:hover:not(.active) {
+                background-color: #555;
+            }
+
+        /* top nav right start */
+        ul.minitopnav li.right {
+            float: right;
+        }
+
+@media screen and (max-width: 600px) {
+    ul.minitopnav li.right,
+    ul.minitopnav li {
+        float: none;
+    }
+}
+
+/* top nav mini end */
+
+header {
+    width: 100%;
+    height: 100%;
+    background-color: White;
+}
+
+/* top nav main start */
+#topnavnmain {
+    height: 60px;
+    width: 50%;
+    margin: auto;
+}
+ul.topnavmain {
+    width:95%;
+    background-color: white;
+    line-height: 0.5;
+    list-style-type: none;
+    margin: auto;
+    padding: 5px 0 0 0;
+    overflow: hidden;
+    /*background-color: #101010;*/
+    /*-webkit-box-shadow: 0px 2px 5px 0px red;
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);*/
+}
+
+    ul.topnavmain li {
+        float: left;
+    }
+
+        ul.topnavmain li a {
+            display: block;
+            color: black;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+            ul.topnavmain li a:hover:not(.active) {
+                background-color: #555;
+            }
+
+        /* top nav right start */
+        /*ul.topnavmain li.right {
+            float: right;
+        }*/
+
+@media screen and (max-width: 600px) {
+    ul.topnavmain li.right,
+    ul.topnavmain li {
+        float: none;
+    }
+}
+
+/* top nav main end */
+
