--- a/Moccie/NewStyles/FrontPage.css
+++ b/Moccie/NewStyles/FrontPage.css
@@ -2,7 +2,51 @@
 
 }
 .FrontImg {
-    width:100%;
+    width: 100%;
     height: 300px;
-    color:red;
+    background-color: red;
+}
+.AboutText {
+    background-color: rgb(255, 255, 255);
+    width: 1200px;
+    height: 100%;
+    float: left;
+    position: relative;
+    z-index: 1;
+    /*box-shadow: rgba(0, 0, 0, 0.75) 2px 2px 5px 0px;*/
+    margin: 30px 0px 20px 0px;
+    
+}
+.AboutInfo {
+    margin: 0 20px 0 0;
+    width: 400px;
+    /*height:500px;*/
+    background-color: white;
+    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+    margin-bottom: 25px;
+    float:left;
+}
+#FrontGrupper {
+    width: 100%; 
+    /* margin: 50px auto; */
+    clear: both; 
+    /* margin-left: 470px; */
+}
+.FrontGruppeImg {
+    float: left;
+    overflow: hidden;
+}
+#DividedImg {
+    /*margin: 0 20px 0 0; */
+    /* width: 310px; */
+    /* height: 160px; */
+    background-color: white;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    /* margin-bottom: 25px; */
+}
+.GroupLink {
+    font-family: Segoe UI Black;
+    list-style: none;
+    text-decoration: none;
+    color: #000;
 }
